--- a/aboutme.html
+++ b/aboutme.html
@@ -57,9 +57,7 @@
                             <p id="interests" class="bodytext">Interested in gene editing, bioinformatics, and design, with a background in character animation. 
                                 I've completed two six month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio</a></u> studying DNA damage repair and in-vivo gene editing strategies, respectively.
                             </p>
-                            <p class="bodytext">Outside of academic work, I am an active cellist in Northeastern's classical music scene. I have been principal cellist of Northeastern's 
-                                Symphony Orchestra, performed at multiple retirement homes and hospitals, as well as 
-                                performed chamber music at New England Conservatory. 
+                            <p class="bodytext">Outside of academics, I play a lot of cello. I've performed chamber music at New England Conservatory, was the principal cellist of Northeastern's Symphony Orchestra, and performed at multiple retirement homes and hospitals.
                             <p id="contact" class="bodytext"><a href="https://www.linkedin.com/in/yikai-kuo-90174a126/"><u>linkedin</u></a> // <a href="https://github.com/KwhoaKai"><u>github</u></a> // kuo.e@husky.neu.edu</p>
                         </div>
                         <div class="col-md-2 hidden-xs"></div>
