replace gif with mp4

--- a/animations.html
+++ b/animations.html
@@ -47,7 +47,12 @@
                     </video>
                 </div>
                 <img data-src="/Animation-Gifs/outlinePoke.gif" class="lazyload center padtopbot" alt="Outline version of Pokemon Go animation"/>
-                <img data-src="/Animation-Gifs/comparePoke.gif" class="lazyload center padtopbot" alt="Three-way comparison of object catch"/>
+                <div id="viddiv">
+                    <video class="center padtopbot" playsinline preload="auto" autoplay muted loop id="closetVideo">
+                        <source src="/Animation-Gifs/pokeMp4.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <!-- <img data-src="/Animation-Gifs/comparePoke.gif" class="lazyload center padtopbot" alt="Three-way comparison of object catch"/> -->
                 <img data-src="/Animation-Gifs/boxy.gif" class="lazyload center padtopbot" alt="Box character with smoke"/>
                 <img data-src="https://66.media.tumblr.com/6be98caf3314dbb0eece43d6c8ab471d/tumblr_ndf0figX551tk9o89o1_640.gifv" class="lazyload center padtopbot" alt="Smooth fight transformation"/>
                 <img data-src="/Animation-Gifs/ebiJump.gif" class="lazyload center padtopbot" alt="ebi fry jumps"/>
