update work page title

--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
                 <p id="animText" class="titleText align-middle">grailed scraper</p>
             </div>
             <div id="p5Type" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5type'">
-                <p id="typeText" class="titleText align-middle">Type and p5</p>
+                <p id="typeText" class="titleText align-middle">type and p5</p>
             </div>
             
             <div id="animations" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='animations'">
