--- a/p5type.html
+++ b/p5type.html
@@ -61,7 +61,7 @@
                         <p>
                             <strong>Typography</strong> is an integral part of graphic design. 
                             In an effort to buff my design skills and dive deeper into typography, I began reading
-                            <i>A Type Primer</i> by John Kane, who also teaches typography at Northeastern University.
+                            <i>A Type Primer</i> by John Kane, who coincidentally also teaches typography at Northeastern University.
                         </p>
                         <p>
                             Kane emphasizes an understanding of the letterform in several ways. One exercise places the same letter
@@ -110,7 +110,7 @@
                         </div>
                         <p>
                             Users resize and reposition a letter of their choosing four times. The final two by two grid is created by 
-                            stitching together their individual submissions, and can be downloaded as a png. 
+                            stitching together their individual submissions and can be downloaded as a png. 
                         </p>
                         <p>
                             Grids made using TypeForm are displayed below.
