added type portrait

--- a/animations.html
+++ b/animations.html
@@ -40,6 +40,11 @@
             </div>
             <div id="content" class="hidden">
                 <!-- animation gif dump, first animation -->
+                <div id="viddiv">
+                    <video class="center padtopbot" playsinline preload="auto" autoplay muted loop id="closetVideo">
+                        <source src="/Animation-Gifs/blueVaporface.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <img data-src="/Animation-Gifs/noCompilationGif.gif" class="lazyload center padtopbot" alt="'No!' character animation"/>
                 <div id="viddiv">
                     <video class="center padtopbot" playsinline preload="auto" autoplay muted loop id="closetVideo">
