--- a/aboutme.html
+++ b/aboutme.html
@@ -51,8 +51,8 @@
                         <div class="col-md-12 col-xs-12 col-lg-11">
                             <h1 id="name">Yikai Kuo:</h1>
                             <div id="sep"></div>
-                            <p id="descrp" class="bodytext">A Northeastern University student working towards a BS in <strong>Biology</strong> and
-                                minor in <strong>Computer Science</strong>.
+                            <p id="descrp" class="bodytext">A Northeastern University graduate with a BS in <strong>Biology</strong> and minor in <strong>Computer Science</strong>.
+                                Currently working at Mass General as a Data Analyst for the <a href="https://www.actru.org/">ACTRU</a> and Research Assistant for the <a href="http://www.omics.kitchen/">Kitchen Lab</a> of the Cardiovascular Research Center.
                             </p>
                             <p id="interests" class="bodytext">Interested in gene editing, bioinformatics, and design, with a background in character animation. 
                                 I've completed two six month coops at <u><a href="https://editasmedicine.com/">Editas Medicine</a></u> and <u><a href="https://www.bluebirdbio.com/">bluebird bio</a></u> studying DNA damage repair and in-vivo gene editing strategies, respectively.
