--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
-    <link type="text/css" href="meStyle.css" rel="stylesheet">
+    <link type="text/css" href="./style/meStyle.css" rel="stylesheet">
     </link>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
@@ -88,4 +88,4 @@
     <script src="/__/firebase/init.js"></script>
 </body>
 </html>
-<script src="typeIdx.js"></script>
+<script src="./scripts/typeIdx.js"></script>
