--- a/p5sketches.html
+++ b/p5sketches.html
@@ -14,13 +14,13 @@
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5/lib/p5.min.js"></script>
-    <script src="redWave.js"></script>
-    <script src="facesPort.js"></script>
+    <script src="./scripts/redWave.js"></script>
+    <script src="./scripts/facesPort.js"></script>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
-    <link type="text/css" href="p5Style.css" rel="stylesheet">
+    <link type="text/css" href="./style/p5Style.css" rel="stylesheet">
     </link>
     <script>
         $(document).ready(function() {
