--- a/animations.html
+++ b/animations.html
@@ -9,7 +9,7 @@
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         </link>
         </link>
-        <link type="text/css" href="animationCss.css" rel="stylesheet">
+        <link type="text/css" href="./style/animationCss.css" rel="stylesheet">
         </link>
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
         <meta charset="utf-8">
@@ -18,7 +18,7 @@
         <meta http-equiv="cache-control" content="no-cache" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="-1" />
-        <script src="lazysizes.min.js" async=""></script>
+        <script src="./scripts/lazysizes.min.js" async=""></script>
         <script>
             $(document).ready(function() {
                 $("#content").hide().removeClass("hidden").fadeIn(300);
