--- a/figures.html
+++ b/figures.html
@@ -9,7 +9,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
     </link>
-    <link type="text/css" href="figureCss.css" rel="stylesheet">
+    <link type="text/css" href="./style/figureCss.css" rel="stylesheet">
     </link>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
