--- a/grailed.html
+++ b/grailed.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
-    <link type="text/css" href="grailedCss.css" rel="stylesheet">
+    <link type="text/css" href="./style/grailedCss.css" rel="stylesheet">
     </link>
     <script>
         $(document).ready(function() {
