--- a/work.html
+++ b/work.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
-    <link type="text/css" href="workCss.css" rel="stylesheet">
+    <link type="text/css" href="./style/workCss.css" rel="stylesheet">
     </link>
     <script>
         $(document).ready(function() {
