--- a/work.html
+++ b/work.html
@@ -42,21 +42,24 @@
         </div>
 
         <div id="choiceId" class="row hidden">
+            <div id="covid" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='covid'">
+                <p class="titleText align-middle blackText">covid</p>
+            </div>
             <div id="grailed" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='grailed'">
-                <p id="animText" class="titleText align-middle">grailed scraper</p>
+                <p  class="titleText align-middle whiteText">grailed scraper</p>
             </div>
             <div id="p5Type" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5type'">
-                <p id="typeText" class="titleText align-middle">type and p5</p>
+                <p = class="titleText align-middle blackText">type and p5</p>
             </div>
             
             <div id="animations" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='animations'">
-                <p class="titleText align-middle">animations</p>
+                <p class="titleText align-middle blackText">animations</p>
             </div>
             <div id="figures" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='figures'">
-                <p id="figureText" class="titleText align-middle">figure work</p>
+                <p  class="titleText align-middle blackText">figure work</p>
             </div>
             <div id="p5" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5sketches'">
-                <p id="animText" class="titleText align-middle">p5.js doodles</p>
+                <p  class="titleText align-middle whiteText">p5.js doodles</p>
             </div>
         </div>
         <footer id="footer" class="fixed-bottom">
