--- a/mood.html
+++ b/mood.html
@@ -2,37 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta name="description"
-        content="Yikai Kuo (郭毅剴) is a molecular biologist with a passion for gene editing, bioinformatics, and art. This is his personal site featuring some of his work." />
-    <title>Yikai Kuo</title>
+    <title>I don't mind being lost - Yikai Kuo</title>
+    <meta name="description" content="\x22 I've never minded it \x22, he went on. \x22 Being lost, that is.\x22" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5/lib/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-
-    <link rel="icon" href="/favicon.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap"
         rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </link>
-    <link type="text/css" href="./style/meStyle.css" rel="stylesheet">
     </link>
+    <link type="text/css" href="./style/moodCss.css" rel="stylesheet">
+    </link>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta charset="utf-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </meta>
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="-1" />
-    <script>
-        $(document).ready(function () {
-            $("#content").hide().removeClass("hidden").fadeIn(300);
-        });
-    </script>
+    <script src="./scripts/lazysizes.min.js" async=""></script>
 </head>
 
 <body>
-    <div class="container" id="wholeBody">
+    <div class="container">
         <div id="headDiv" class="row">
             <div class="col-xs-12 col-xl-12">
                 <a href="https://kwhoakai.github.io/">
@@ -47,50 +39,24 @@
                 </a>
             </div>
         </div>
+        <div id="content">
 
-        <div id="content" class="hidden">
-            <div class="row" id="contentWrapper">
-                <div class="col-md-hidden col-xs-hidden"></div>
-                <!-- Sidebar menu -->
-                <div class="col-md-2 col-xs-12 col-xl-2" id="sideBar">
-                    <div class="" id="nameRow">
-                        <h1 id="nameIndex">Yikai Kuo</h1>
-                        <div id="sepYikai"></div>
-                    </div>
-                    <!-- sub headings -->
-                    <div class="subHead">
-                        <a href="aboutme">
-                            <div class="row" id="aboutMe">
-                                <div class="col-12">
-                                    <p><i>about</i></p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="work">
-                            <div class="row" id="portfolio">
-                                <div class="col-12">
-                                    <p><i>work</i></p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="mood">
-                            <div class="row" id="mood">
-                                <div class="col-12">
-                                    <p><i>mood</i></p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <!-- p5 canvas -->
-                <div class="col-md-5 col-xs-12 col-xl-7" id="typeDiv"></div>
-                <img id="myimg" />
-            </div>
+            <!-- <div id="viddiv">
+                <video class="center padtopbot" playsinline preload="auto" autoplay muted loop id="closetVideo">
+                    <source src="/Animation-Gifs/blueVaporface.mp4" type="video/mp4">
+                </video>
+            </div> 
+            <img data-src="/Animation-Gifs/ebiJump.gif" class="lazyload center padtopbot" alt="ebi fry jumps" />
+            <img data-src="/Animation-Gifs/jump.gif" class="lazyload center padtopbot" alt="Jumping animation" /> -->
         </div>
         <footer id="footer" class="fixed-bottom">
             <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
         </footer>
-        <script src="./scripts/typeIdx.js"></script>
+    </div>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-storage.js"></script>
+    <script src="./initFirebase.js"></script>
 </body>
 
 </html>
