--- a/mood.html
+++ b/mood.html
@@ -56,7 +56,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-storage.js"></script>
-    <script src="./initFirebase.js"></script>
+    <script src="./scripts/mood.js"></script>
 </body>
 
 </html>
