change title on mood page

--- a/mood.html
+++ b/mood.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>I don't mind being lost - Yikai Kuo</title>
+    <title>I don't mind being lost</title>
     <meta name="description" content="\x22 I've never minded it \x22, he went on. \x22 Being lost, that is.\x22" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap"
         rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
