update meta descrp

--- a/mood.html
+++ b/mood.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>I don't mind being lost</title>
-    <meta name="description" content="\x22 I've never minded it \x22, he went on. \x22 Being lost, that is.\x22" />
+    <meta name="description" content="Where to next?" />
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap"
         rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
