--- a/mood.html
+++ b/mood.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>I don't mind being lost</title>
-    <meta name="description" content="Where to next?" />
+    <meta name="description" content="a stream of aesthetic consciousness." />
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap"
         rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
