firebase performance cdn

--- a/mood.html
+++ b/mood.html
@@ -55,6 +55,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-performance.js"></script>
     <script src="./scripts/mood.js"></script>
 </body>
 
