--- a/aboutme.html
+++ b/aboutme.html
@@ -79,7 +79,7 @@
                             <a href="https://www.instagram.com/kwo.kai/"><u>instagram</u></a> //
                             <a href="https://www.linkedin.com/in/yikai-kuo-90174a126/"><u>linkedin</u></a> //
                             <a href="https://github.com/KwhoaKai"><u>github</u> </a> //
-                            kuo.e@husky.neu.edu
+                            kuo.yikai@gmail.com
                         </p>
                     </div>
                     <div class="col-md-2 hidden-xs"></div>
