Moodboard in Three.js

--- a/mood.html
+++ b/mood.html
@@ -38,16 +38,9 @@
                 </a>
             </div>
         </div>
-        <div id="content">
 
-            <!-- <div id="viddiv">
-                <video class="center padtopbot" playsinline preload="auto" autoplay muted loop id="closetVideo">
-                    <source src="/Animation-Gifs/blueVaporface.mp4" type="video/mp4">
-                </video>
-            </div> 
-            <img data-src="/Animation-Gifs/ebiJump.gif" class="lazyload center padtopbot" alt="ebi fry jumps" />
-            <img data-src="/Animation-Gifs/jump.gif" class="lazyload center padtopbot" alt="Jumping animation" /> -->
-        </div>
+        <canvas id="c"></canvas>
+
         <footer id="footer" class="fixed-bottom">
             <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
         </footer>
@@ -56,7 +49,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-storage.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-performance.js"></script>
-    <script src="./scripts/mood.js"></script>
+    <script src="./scripts/mood.js" type="module"></script>
 </body>
 
 </html>
