--- a/mood.html
+++ b/mood.html
@@ -39,7 +39,20 @@
             </div>
         </div>
 
-        <canvas id="c"></canvas>
+
+        <div id="content">
+            <h1 id="moodtitle" class="abspos noint"></h1>
+            <!-- <pre class="abspos">
+            The top left corner of the band of tracing paper is stapled onto the wall
+            The top right corner is stapled
+            Finally the middle
+            The staple is horizontal
+            The other 48 too
+            </pre> -->
+
+            <canvas id="c"></canvas>
+        </div>
+
 
         <footer id="footer" class="fixed-bottom">
             <div class="footer-copyright text-center">Yikai Kuo © 2019</div>
