--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@
                     <div class="col-lg-1"></div>
                     <div class="col-md-12 col-xs-12 col-lg-11">
                         <h1 id="name">Yikai Kuo:</h1>
-                        <div id="sep"></div>
+                        <div id="sepRed"></div>
                         <p id="descrp" class="bodytext">A Northeastern University graduate with a BS in
                             <strong>Biology</strong> and minor in <strong>Computer Science</strong>.
                             Currently working at Mass General Hospital as a Data Analyst / Research Assistant for both
@@ -75,12 +75,39 @@
                         <p class="bodytext">Outside of academics, I play a lot of cello. I've performed chamber music at
                             New England Conservatory, was the principal cellist of Northeastern's Symphony Orchestra,
                             and performed at multiple retirement homes, hospitals, and private events.
+                        </p>
+
                         <p id="contact" class="bodytext">
                             <a href="https://www.instagram.com/kwo.kai/"><u>instagram</u></a> //
                             <a href="https://www.linkedin.com/in/yikai-kuo-90174a126/"><u>linkedin</u></a> //
                             <a href="https://github.com/KwhoaKai"><u>github</u> </a> //
                             kuo.yikai@gmail.com
                         </p>
+
+                        <strong class="bodytext">PUBLICATIONS:</strong>
+                        <div id="sepRed"></div>
+                        <div id="pubs" class="bodytext">
+                            <p>
+                                <u>
+                                    <a href="https://www.biorxiv.org/content/10.1101/2020.07.31.230680v1">Multiplexed
+                                        fractionated proteomics reveals synaptic factors associated with cognitive
+                                        resilience in Alzheimer’s Disease
+                                    </a>
+                                </u>
+                            </p>
+
+
+                            <p>
+                                <u>
+                                    <a href="https://pubmed.ncbi.nlm.nih.gov/31748415/">The exercise cytokine
+                                        interleukin-15
+                                        rescues slow wound healing in aged mice
+                                    </a>
+                                </u>
+                            </p>
+                        </div>
+                        <br>
+
                     </div>
                     <div class="col-md-2 hidden-xs"></div>
                 </div>
