fix missing font

--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
                 <p class="titleText align-middle whiteText">grailed scraper</p>
             </div>
             <div id="p5Type" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='p5type'">
-                <p=class="titleText align-middle blackText">type and p5</p>
+                <p=class="titleText align-middle blackText titleText">type and p5</p>
             </div>
 
             <div id="animations" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='animations'">
