--- a/aboutme.html
+++ b/aboutme.html
@@ -62,7 +62,7 @@
                         <p id="descrp" class="bodytext">A Northeastern University graduate with a BS in
                             <strong>Biology</strong> and minor in <strong>Computer Science</strong>.
                             Currently working at Mass General Hospital as a Data Analyst / Research Assistant for both
-                            the <a href="https://www.actru.org/"><u>ACTRU</u></a> of the Department of Neurology and the
+                            <a href="https://www.actru.org/"><u>ACTRU</u></a> of the Department of Neurology and the
                             <a href="http://www.omics.kitchen/"><u>Kitchen Lab</u></a> of the Cardiovascular Research
                             Center.
                         </p>
@@ -89,11 +89,11 @@
                         <div id="pubs" class="bodytext">
                             <p>
                                 <u>
-                                    <a href="https://www.biorxiv.org/content/10.1101/2020.07.31.230680v1">Multiplexed
+                                    <a href="https://www.sciencedirect.com/science/article/pii/S0197458021001275">Multiplexed
                                         fractionated proteomics reveals synaptic factors associated with cognitive
                                         resilience in Alzheimer’s Disease
                                     </a>
-                                </u>
+                                </u> | Neurobiology of Aging
                             </p>
 
 
@@ -103,7 +103,7 @@
                                         interleukin-15
                                         rescues slow wound healing in aged mice
                                     </a>
-                                </u>
+                                </u> | Journal of Biological Chemistry
                             </p>
                         </div>
                         <br>
