Updated publication list

--- a/aboutme.html
+++ b/aboutme.html
@@ -96,6 +96,15 @@
                                 </u> | Neurobiology of Aging
                             </p>
 
+                            <p>
+                                <u>
+                                    <a href="https://www.medrxiv.org/content/10.1101/2021.01.02.20248998v1">Evaluation
+                                        of serological lateral flow assays for severe acute respiratory syndrome
+                                        coronavirus-2
+                                    </a>
+                                </u> | BMC Infection Diseases (accepted, awaiting publication)
+                            </p>
+
 
                             <p>
                                 <u>
