add scroll wheel functionality and editable text on /mood

--- a/mood.html
+++ b/mood.html
@@ -41,7 +41,8 @@
 
 
         <div id="content">
-            <h1 id="moodtitle" class="abspos noint"></h1>
+            <h1 contenteditable="true" id="moodtitle" class="abspos "></h1>
+
             <!-- <pre class="abspos">
             The top left corner of the band of tracing paper is stapled onto the wall
             The top right corner is stapled
