update title text mood

--- a/mood.html
+++ b/mood.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>I don't mind being lost</title>
+    <title>AAHHHHHHHHHHHHH</title>
     <meta name="description" content="a stream of aesthetic consciousness." />
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|DM+Serif+Text|Noto+Serif&display=swap"
         rel="stylesheet">
