--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,8 @@
                         <div id="sepRed"></div>
                         <p id="descrp" class="bodytext">A Northeastern University graduate with a BS in
                             <strong>Biology</strong> and minor in <strong>Computer Science</strong>.
-                            Currently working at Mass General Hospital as a Data Analyst / Research Assistant for both
+                            A Northeastern University graduate with a BS in Biology and minor in Computer Science.
+                            Currently a data scientist at The TIE, previously Research Assistant for both
                             <a href="https://www.actru.org/"><u>ACTRU</u></a> of the Department of Neurology and the
                             <a href="http://www.omics.kitchen/"><u>Kitchen Lab</u></a> of the Cardiovascular Research
                             Center.
@@ -123,7 +124,7 @@
             </div>
         </div>
         <footer id="footer" class="fixed-bottom">
-            <div class="footer-copyright text-center">Yikai Kuo © 2021</div>
+            <div class="footer-copyright text-center">Yikai Kuo © 2022</div>
         </footer>
     </div>
 </body>
