--- a/aboutme.html
+++ b/aboutme.html
@@ -61,10 +61,11 @@
                         <div id="sepRed"></div>
                         <p id="descrp" class="bodytext">A Northeastern University graduate with a BS in
                             <strong>Biology</strong> and minor in <strong>Computer Science</strong>.
-                            Currently a data scientist at The TIE, previously Research Assistant for both
+                            Currently a data scientist at <u><a href="https://www.thetie.io/">The TIE</a></u>,
+                            previously a research associate for both
                             <a href="https://www.actru.org/"><u>ACTRU</u></a> of the Department of Neurology and the
                             <a href="http://www.omics.kitchen/"><u>Kitchen Lab</u></a> of the Cardiovascular Research
-                            Center.
+                            Center, at Massachusetts General Hospital.
                         </p>
                         <p id="interests" class="bodytext">Interested in gene editing, bioinformatics, and design, with
                             a background in character animation.
