update publication list

--- a/aboutme.html
+++ b/aboutme.html
@@ -99,11 +99,11 @@
 
                             <p>
                                 <u>
-                                    <a href="https://www.medrxiv.org/content/10.1101/2021.01.02.20248998v1">Evaluation
+                                    <a href="https://bmcinfectdis.biomedcentral.com/articles/10.1186/s12879-021-06257-7">Evaluation
                                         of serological lateral flow assays for severe acute respiratory syndrome
                                         coronavirus-2
                                     </a>
-                                </u> | BMC Infection Diseases (accepted, awaiting publication)
+                                </u> | BMC Infection Diseases 
                             </p>
 
 
