Add link from work page to sweater-palettes project

--- a/work.html
+++ b/work.html
@@ -48,6 +48,11 @@
         </div>
 
         <div id="choiceId" class="row hidden">
+            <div id="sweater" class="prev col-xs-12 col-md-4 col-xl-3"
+                onclick="location.href='https://yikaikuo.com/sweater-palettes/'">
+                <p class="titleText align-middle blackText">sweater palettes</p>
+            </div>
+
             <div id="covid" class="prev col-xs-12 col-md-4 col-xl-3" onclick="location.href='covid'">
                 <p class="titleText align-middle blackText">covid</p>
             </div>
